Update current state
* The image was renamed to just auditd for simplicity
* I turned privileged mode for this container temporarily:

  - This makes sure that SELinux labeling is disabled (this has to be
    fixed at some point).
  - Turns on all capabilities for the container.

* Sets the container to use the host's network instead of having it
  namespaced.

  - This is because namespaced networks cause issues with netlink calls;
    which the container needs.

--- a/auditd-daemonset.yaml
+++ b/auditd-daemonset.yaml
@@ -18,17 +18,13 @@ spec:
     spec:
       containers:
       - name: auditd
-        image: image-registry.openshift-image-registry.svc:5000/openshift-logging/auditd-container:latest
+        image: image-registry.openshift-image-registry.svc:5000/openshift-logging/auditd:latest
         securityContext:
-          #privileged: true
-          capabilities:
-            add: ["AUDIT_READ", "AUDIT_CONTROL", "AUDIT_WRITE", "SYS_NICE"]
-          seLinuxOptions:
-            user: system_u
-            role: system_r
-            type: auditd_exec_t
-            level: s0
-      dnsPolicy: ClusterFirst
+          privileged: true
+          #capabilities:
+          #  add: ["AUDIT_READ", "AUDIT_CONTROL", "AUDIT_WRITE", "SYS_NICE"]
+      dnsPolicy: ClusterFirstWithHostNet
+      hostNetwork: true
       schedulerName: default-scheduler
       serviceAccount: logcollector
       serviceAccountName: logcollector
