Use host's IPC namespace
This is needed in order for auditd to properly log IPC calls.

--- a/auditd-daemonset.yaml
+++ b/auditd-daemonset.yaml
@@ -43,6 +43,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       hostPID: true
+      hostIPC: true
       schedulerName: default-scheduler
       serviceAccount: logcollector
       serviceAccountName: logcollector
