--- a/auditd-daemonset.yaml
+++ b/auditd-daemonset.yaml
@@ -38,8 +38,8 @@ spec:
         volumeMounts:
         - mountPath: /dev/log
           name: devlog
-        - mountPath: /var/log
-          name: varlog
+        - mountPath: /var/log/audit
+          name: auditlog
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       hostPID: true
@@ -60,6 +60,10 @@ spec:
           path: /var/log
           type: ""
         name: varlog
+      - hostPath:
+          path: /var/log/audit
+          type: ""
+        name: auditlog
   updateStrategy:
     rollingUpdate:
       maxUnavailable: 1
