Run augenrules on container startup
This makes sure that the rules specified in /etc/audit/rules.d get
loaded into the kernel.

--- a/auditd-daemonset.yaml
+++ b/auditd-daemonset.yaml
@@ -125,6 +125,10 @@ spec:
         - name: auditdconfig
           mountPath: /etc/audit/rules.d/audit.rules
           subPath: audit.rules
+        lifecycle:
+          postStart:
+            exec:
+              command: ["/sbin/augenrules", "--load"]
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       hostPID: true
